# z1_ros

./: .gitmodules  Dockerfile  docker-compose.yaml
z1_calibration/: CMakeLists.txt  package.xml
z1_calibration/config/: calibrate.yaml  calibration_poses.bag  capture_checkerboards.yaml
z1_calibration/launch/: calibrate.launch  capture_checkerboards.launch  real_arm.launch
z1_calibration/scripts/: calibrate_robot  capture_poses.py  save_poses.py
z1_calibration/xacro/: uncalibrated_robot.xacro
