<?xml version="1.0"?>
<package format="3">
  <name>z1_calibration</name>
  <version>0.0.2</version>
  <description>
    Launch and configuration files for calibrating z1 using the 'robot_calibration' package.
  </description>

  <author>Vladislav Antipov (TexnoMann)</author>
  <maintainer email="vantipovt@gmail.com">TexnoMann</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend version_gte="0.5.1">robot_calibration</exec_depend>
</package>
